--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <!-- Reference String -->
                 <div class="mb-4">
                     <label for="ref-string" class="block text-sm font-medium text-gray-700 mb-1">Reference String (comma-separated)</label>
-                    <input type="text" id="ref-string" value="7, 0, 1, 2, 0, 3, 0, 4, 2, 3, 0, 3, 2, 1, 2, 0, 1, 7, 0, 1" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none">
+                    <input type="text" id="ref-string" value="7, 0, 1, 2, 0, 3, 0, 4, 2, 3, 0, 2" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:outline-none">
                 </div>
 
                 <!-- Start Button -->
